[package]
name = "rust_build_demo1"
version = "0.1.0"
authors = ["surechen <surechen17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dangerous="0.9"
#tokio-rustls = {version = "0.12.1"}
#async-std = {version="1.9"}
#semval="0.1.7"

#[target.'cfg(loom)'.dependencies]
#loom = "0.4"
[dev-dependencies]
quickcheck = "1"
proptest = "1.0.0"